--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,8 +1,14 @@
+*{
+
+
+
+}
+
 body {
 height:100vh;
   font-family: Roboto, sans-serif;
   font-weight: bold;
- 
+ color: black;
 }
 
 .head
@@ -14,22 +20,22 @@ font-size: 1.5rem;
   
   a {
  
-    color:white;
+    color:black;
     text-decoration: none;
     cursor: grab;
   }
 
   .Button {
     font-size: medium;
-    color: ;
+    color: black;
     position: relative;
     top: 0px;
     padding: 15px 25px;
-    border: solid #61FFE4 3px;
+    border: solid greenyellow 3px;
     border-radius: 20px;
     margin: 25px 50%;
     box-shadow: 0px 10px 0px #61FFE4;
-    background-color:#61FFE4;
+    
     
   }
   
