--- a/src/css/addcandidate.css
+++ b/src/css/addcandidate.css
@@ -1,105 +1,129 @@
-
-body{
-  height:100vh;
+body {
+  height: 100vh;
 }
 
 main {
-    margin-top: 60px;
-  }
-  #content {
-    display: none;
-  }
-  form {
-    width: 350px;
-    margin-bottom: 10px;
-  }
-  ul{
-    margin-bottom: 0px;
-  }
-  #completedTaskList .content {
-    color: grey;
-    text-decoration: line-through;
-  } 
-  h1 {
-    color: #fff;
-    padding: 10px;
-
-  }
-    
-  .box {
-    max-width: 600px;
-    margin: 44px auto;
-    color:black;
-    background:#d8d8d8;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px -5px #a5a2a2;
-    text-align: center;
-  }
-  
-  .account{
-      text-decoration: none;
-      color: black;
-  }
-  .account:hover{
-      text-decoration: none;
-      color: black;
-  }
-  .sbutton
-  {
-    margin:10px;
-    background-color: #ffffff;
-    color:rgb(0, 0, 0);
-    border-radius: 2px;
-    
-  }
-  .canbutton
-  {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .taskTemplate
-  {
-    display: flex;
-
-    background-color:#d8d8d8;
-
-    box-shadow: 2px 2px 15px -5px #b1aeae;
-    color:black;
-    font-weight: 500;
-    margin:5px;
-    margin-bottom: 8px;
- margin-right:15px ;
-    padding:10px;
-    border-radius: 5px;
- padding-left:20px; 
-  
-  }
-  
-  .container-fluid
-  {
-
-
-
-  }
-  .mainbox
-{
-  
-  height: 100vh;
-margin:5px auto;
-  width: 50%;
-    border: 5px solid #a6a3a3 ;
-    box-shadow: 5px 5px 15px -5px #a5a2a2;
-    border-radius: 3px;
+  margin-top: 60px;
 }
-.block
-{
+
+#content {
+  display: none;
+}
+
+form {
+  width: 350px;
+  margin-bottom: 10px;
+}
+
+ul {
+  margin-bottom: 0px;
+}
+
+#completedTaskList .content {
+  color: grey;
+  text-decoration: line-through;
+}
+
+h1 {
+  color: #fff;
+  padding: 10px;
+
+}
+
+.box {
+  max-width: 600px;
+  margin: 44px auto;
+  color: black;
+  background: #d8d8d8;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px -5px #a5a2a2;
+  text-align: center;
+}
+
+.account {
+  text-decoration: none;
+  color: black;
+}
+
+.account:hover {
+  text-decoration: none;
+  color: black;
+}
+
+.sbutton {
+  margin: 10px;
+  border: none;
+  padding: 10px;
+  background-color: greenyellow;
+  color: black;
+  border-radius: 2px;
+  cursor:move;
+  border-radius: 20px;
+
+  box-shadow: 5px 5px 15px -5px #a5a2a2;
+
+}
+
+
+.canbutton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.taskTemplate {
+  display: flex;
+
+  background-color: #d8d8d8;
+
+  box-shadow: 2px 2px 15px -5px #b1aeae;
+  color: black;
+  font-weight: 500;
   margin: 5px;
-border:2px solid rgb(49, 43, 226);
-background-color: rgb(49, 43, 226);
-height: 10px;
-width: 20px;
-margin-right: 15px;
-border-radius: 4px;
+  margin-bottom: 8px;
+  margin-right: 15px;
+  padding: 10px;
+  border-radius: 5px;
+  padding-left: 20px;
+
+}
+
+.container-fluid {}
+
+.mainbox {
+
+  height: 100vh;
+  margin: 5px auto;
+  width: 50%;
+  border: 5px solid #a6a3a3;
+  box-shadow: 5px 5px 15px -5px #a5a2a2;
+  border-radius: 3px;
+}
+
+.block {
+  margin: 5px;
+  border: 2px solid rgb(49, 43, 226);
+  background-color: rgb(49, 43, 226);
+  height: 10px;
+  width: 20px;
+  margin-right: 15px;
+  border-radius: 4px;
+}
+
+.startVoting {
+  border: none;
+  background-color: greenyellow;
+  border-radius: 20px;
+  padding: 1rem;
+
+  box-shadow: 5px 5px 15px -5px #a5a2a2;
+
+}
+
+
+.buttonBox {
+  margin: 10px;
+
+  display: flex;
+  justify-content: center;
 }
